# yap-on-slack

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml.example  messages.json.example  mise.toml  pyproject.toml  users.yaml.example
.claude/skills/adr/: SKILL.md
.claude/skills/github-actions/: SKILL.md
.claude/skills/github-actions-troubleshooting/: SKILL.md
.github/prompts/: plan-configRestructure.prompt.md  plan-scanChannelSystemPrompt.prompt.md
.github/workflows/: build.yml  publish.yml  release-please.yml
docs/: usage.md
docs/adrs/: 0000-template.md  0001-slack-session-tokens.md  0002-multi-user-yaml-configuration.md  0003-slack-api-form-urlencoded.md  0004-unified-config-yaml.md  0005-channel-scanning-ai-prompts.md  0006-xdg-config-over-platformdirs.md  README.md
schema/: config.schema.json
tests/: test_bot_token_auth.py  test_cli.py  test_config_unified.py  test_error_handling.py  test_formatting.py  test_integration.py  test_placeholder.py  test_scan.py  test_slack_api.py  test_ssl_config.py  test_throttle_and_exports.py
yap_on_slack/: __init__.py  cli.py  post_messages.py
yap_on_slack/prompts/: generate_channel_prompts.txt  generate_messages.txt
yap_on_slack/templates/: config.yaml.template
