[project]
name = "yap-on-slack"
version = "0.1.0"
description = "Simulate realistic messages in Slack channels for testing purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "python-dotenv>=1.0.1", "rich>=13.9.4"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.2", "ruff>=0.8.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
