[project]
name = "yap-on-slack"
version = "1.0.0"
description = "Simulate realistic messages in Slack channels for testing purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pyaml>=25.7.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[project.scripts]
yaponslack = "yap_on_slack.cli:main"
yap-on-slack = "yap_on_slack.cli:main"
yos = "yap_on_slack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
